von markdown zu html ausgearbeitet

--- a/Content.htm
+++ b/Content.htm
@@ -66,22 +66,6 @@ snippets,vorlagen,lernen,verstehen,
 
 <div class="grid-container">
 <article class="content flow">
-  <h2>Fachinformatik </h2>
-  <ul>
-  <h3>Grundlagen </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Zahlensysteme</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Bits und Bytes</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Praxis </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  </ul>
-</article>
-<article class="content flow">
   <h2>Sicherheit </h2>
   <ul>
   <h3>IT-Grundschutz </h3>
@@ -92,30 +76,14 @@ snippets,vorlagen,lernen,verstehen,
   <h3>Software </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <h3>Datensicherheit </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <h3>Datenschutz </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  </ul>
-</article>
-<article class="content flow">
-  <h2>Netzwerke </h2>
-  <ul>
-  <h3>Komponenten </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Kommunikation </h3>
+  <h3>Datensicherheit </h3>
+  <li><b><a href="https://jumi.biz/pages/"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Datenschutz </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Konzepte </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  </ul>
-</article>
-<article class="content flow">
-  <h2>Programmierung </h2>
-  <ul>
-  <h3>Skripte </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Bash</a></b><span class="kleintxt"> Skripte</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Python</a></b><span class="kleintxt"> Skripte</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Powershell</a></b><span class="kleintxt"> Skripte</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Java</a></b><span class="kleintxt"> Skripte</span></li>
   </ul>
 </article>
 <article class="content flow">
@@ -143,6 +111,32 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Netzplan</a></b><span class="kleintxt"> Ablauf</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kritischer Pfad</a></b><span class="kleintxt"> Pufferzeiten</span></li>
   </div>
+</article>
+<article class="content flow">
+  <h2>Programmierung </h2>
+  <ul>
+  <h3>Skripte </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Bash</a></b><span class="kleintxt"> Skripte</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Python</a></b><span class="kleintxt"> Skripte</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Powershell</a></b><span class="kleintxt"> Skripte</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Java</a></b><span class="kleintxt"> Skripte</span></li>
+  </ul>
+</article>
+<article class="content flow">
+  <h2>Fachinformatik </h2>
+  <ul>
+  <h3>Grundlagen </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Zahlensysteme</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Bits und Bytes</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Praxis </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  </ul>
   <div class="in-inside">
   <h3>Marketing </h3>
   <ul>
@@ -156,6 +150,17 @@ snippets,vorlagen,lernen,verstehen,
   </ul>
   </div>
 </div>
+</article>
+<article class="content flow">
+  <h2>Netzwerke </h2>
+  <ul>
+  <h3>Komponenten </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Kommunikation </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Konzepte </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  </ul>
 </article>
 
 </main>
