--- a/pages/Informationssicherheit.htm
+++ b/pages/Informationssicherheit.htm
@@ -22,29 +22,8 @@
 Daten technisch und organisatorisch vor unbefugtem Zugriff, Verlust, Diebstahl oder Beschädigung schützen.
 <b><span style='color:#da4453;'>- </span></b>Verschlüsselung
 <b><span style='color:#da4453;'>- </span></b>Firewalls
-<b><span style='color:#da4453;'>	- </span></b>paketorientiert (klassisch)
-<b><span style='color:#da4453;'>	- </span></b>zustandsorientierte Paketüberprüfung
-<b><span style='color:#da4453;'>		- </span></b><b>**Stateful Packet Inspection**</b> (SPI)
-<b><span style='color:#da4453;'>		- </span></b>Zuordnung aktiver Sitzungen
-<b><span style='color:#da4453;'>			- </span></b>auf Vermittlungsschicht (OSI-Schicht 3)
-<b><span style='color:#da4453;'>		- </span></b>Zwischenspeicher für Verbindungsstatus
-<b><span style='color:#da4453;'>			- </span></b>in dynamischen Zustandstabellen
-<b><span style='color:#da4453;'>		- </span></b>Auswertung durch TCP SYN-/ACK-/FIN-Bits
-<b><span style='color:#da4453;'>			- </span></b>auch (zustandslose) UDP-Datenpakete
-<b><span style='color:#da4453;'>	- </span></b>Mehrstufige Konzepte
-<b><span style='color:#da4453;'>	- </span></b>Regeln für Endpoints und Clients
 <b><span style='color:#da4453;'>- </span></b>Zugriffskontrollen
 <b><span style='color:#da4453;'>- </span></b>Sicherheitsaudits.
-
-
-<b><span style='color:#8e44ad;'>### Netzwerksegmentierung durch VLAN</span></b>
-<b><span style='color:#da4453;'>- </span></b>Netze logisch trennen
-<b><span style='color:#da4453;'>- </span></b>Datenverkehr priorisieren
-<b><span style='color:#da4453;'>- </span></b>Last verteilen
-<b><span style='color:#da4453;'>- </span></b>Broadcast in Domänen unterteilen
-<b><span style='color:#da4453;'>- </span></b>Kollisionsbereiche minimieren
-<b><span style='color:#da4453;'>- </span></b>Gruppenzugehörigkeiten flexibel anpassen
-<b><span style='color:#da4453;'>- </span></b>Datenverkehr spezifisch trennen
 
 <b><span style='color:#8e44ad;'>## Datenschutz</span></b>
 <b><span style='color:#8e44ad;'>### Gesetze und Regelungen</span></b>
@@ -69,21 +48,6 @@ Daten technisch und organisatorisch vor unbefugtem Zugriff, Verlust, Diebstahl o
 <b><span style='color:#da4453;'>- </span></b>ISO 27001
 <b><span style='color:#da4453;'>- </span></b>ISO 27002
 <b><span style='color:#da4453;'>- </span></b>BSI IT-Grundschutz
-
-<b><span style='color:#8e44ad;'>## ISO/IEC 27001 -Zertifizierung</span></b>
-<b><span style='color:#da4453;'>- </span></b>international anerkannter Standard
-<b><span style='color:#da4453;'>- </span></b>Vertrauensgewinn
-<b><span style='color:#da4453;'>	- </span></b>bei Partner
-<b><span style='color:#da4453;'>	- </span></b>bei Kunden
-<b><span style='color:#da4453;'>	- </span></b>in der Öffentlichkeit
-<b><span style='color:#da4453;'>- </span></b>Wettbewerbsvorteil
-<b><span style='color:#da4453;'>- </span></b>Informationssicherheits-Managementsystem (ISMS)
-<b><span style='color:#da4453;'>	- </span></b>Compliance-Anforderungen sicherstellen
-<b><span style='color:#da4453;'>	- </span></b>IT-Risiken minimieren
-<b><span style='color:#da4453;'>	- </span></b>IT-Sicherheitsverfahren etablieren
-<b><span style='color:#da4453;'>	- </span></b>Qualität von IT-Systemen nachhaltig optimieren
-<b><span style='color:#da4453;'>	- </span></b>Sicherheitslücken systematisch aufdecken
-<b><span style='color:#da4453;'>	- </span></b>Abschätzung möglicher Schäden und Folgekosten
 
 <b><span style='color:#8e44ad;'>## Vorschriften</span></b>
 <b><span style='color:#da4453;'>- </span></b>Basel I und II
@@ -301,24 +265,6 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>- </span></b>NET.3.1 Router und Switches
 <b><span style='color:#da4453;'>- </span></b>NET.3.2 Firewall
 <b><span style='color:#da4453;'>- </span></b>NET.3.3 VPN
-<b><span style='color:#da4453;'>	- </span></b>logisches Netzwerk
-<b><span style='color:#da4453;'>	- </span></b>getunnelte Verbindung
-<b><span style='color:#da4453;'>		- </span></b>Sicherheit im unsicheren Netzwerk
-<b><span style='color:#da4453;'>	- </span></b>verschlüsselte Protokolle
-<b><span style='color:#da4453;'>		- </span></b>L2TP over IPsec
-<b><span style='color:#da4453;'>		- </span></b>SSL-VPN
-<b><span style='color:#da4453;'>		- </span></b>OpenVPN
-<b><span style='color:#da4453;'>		- </span></b>Layer-2-VPN
-<b><span style='color:#da4453;'>	- </span></b><b>**End-to-Site**</b>
-<b><span style='color:#da4453;'>		- </span></b>Host-to-LAN
-<b><span style='color:#da4453;'>		- </span></b>Host-to-Gateway
-<b><span style='color:#da4453;'>		- </span></b>Remote-Access-VPN
-<b><span style='color:#da4453;'>	- </span></b><b>**Site-to-Site**</b>
-<b><span style='color:#da4453;'>		- </span></b>LAN-to-LAN
-<b><span style='color:#da4453;'>		- </span></b>Gateway-to-Gateway
-<b><span style='color:#da4453;'>	- </span></b><b>**End-to-End**</b>
-<b><span style='color:#da4453;'>		- </span></b>Host-to-Host
-<b><span style='color:#da4453;'>		- </span></b>Remote-Desktop-VPN
 <b><span style='color:#da4453;'>- </span></b>NET.3.4 Network Access Control
 
 <b><span style='color:#8e44ad;'>#### NET.4: Telekommunikation</span></b>
@@ -365,47 +311,10 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>	- </span></b>Hot/Cold Backup
 <b><span style='color:#da4453;'>	- </span></b>Sicherungswürdige Daten
 <b><span style='color:#da4453;'>	- </span></b>Risikoanalyse
-<b><span style='color:#da4453;'>		- </span></b>Risiken identifizieren
-<b><span style='color:#da4453;'>		- </span></b>Auswirkungen analysieren bei...
-<b><span style='color:#da4453;'>			- </span></b>Datenverlust
-<b><span style='color:#da4453;'>			- </span></b>Verstoß gegen Gesetze, Vorschriften oder Verträge
-<b><span style='color:#da4453;'>			- </span></b>Missbrauch von personenbezogener Daten
-<b><span style='color:#da4453;'>			- </span></b>finanziellem Schaden
-<b><span style='color:#da4453;'>		- </span></b>Auswirkung durch kategorische Kriterien priorisieren
-<b><span style='color:#da4453;'>			- </span></b>Normal:
-<b><span style='color:#da4453;'>				- </span></b>geringfügige juristische Konsequenzen
-<b><span style='color:#da4453;'>				- </span></b>minimale Auswirkungen auf Betroffene
-<b><span style='color:#da4453;'>				- </span></b>nachhaltig-erschüttertes Ansehen bei Kunden und Partnern
-<b><span style='color:#da4453;'>				- </span></b>unter 50.000 Euro verlust
-<b><span style='color:#da4453;'>			- </span></b>Hoch:
-<b><span style='color:#da4453;'>				- </span></b>schwerwiegende juristische Konsequenzen
-<b><span style='color:#da4453;'>				- </span></b>massive Auswirkungen auf Betroffene
-<b><span style='color:#da4453;'>				- </span></b>erschüttertes Ansehen bei Kunden und Partnern
-<b><span style='color:#da4453;'>				- </span></b>50.000 bis 500.000 Euro verlust
-<b><span style='color:#da4453;'>			- </span></b>Sehr hoch:
-<b><span style='color:#da4453;'>				- </span></b>existenzbedrohende juristische Konsequenzen
-<b><span style='color:#da4453;'>				- </span></b>existenzbedrohende Auswirkungen auf Betroffene
-<b><span style='color:#da4453;'>				- </span></b>nachhaltig-erschüttertes Ansehen bei Kunden und Partnern
-<b><span style='color:#da4453;'>				- </span></b>über 500.000 Euro verlust
-<b><span style='color:#da4453;'>		- </span></b>Angriffsrisiko
-<b><span style='color:#da4453;'>		- </span></b>Objekte mit besonderem Sicherheitsrisiko
-<b><span style='color:#da4453;'>		- </span></b>konkrete Bedrohungsszenarien
-<b><span style='color:#da4453;'>		- </span></b>mögliche Schäden durch Angriffe
-<b><span style='color:#da4453;'>		- </span></b>aktuelles Gefährdungspotenzial
-<b><span style='color:#da4453;'>		- </span></b>geeignete Maßnahmen
-<b><span style='color:#da4453;'>		- </span></b>Kosten-Nutzen / Risikoberechnung
-<b><span style='color:#da4453;'>	- </span></b>Vermeidungsstrategien
+<b><span style='color:#da4453;'>		- </span></b>Datenverlust
+<b><span style='color:#da4453;'>		- </span></b>Auswirkung
+<b><span style='color:#da4453;'>		- </span></b>Vermeidungsstrategien
 <b><span style='color:#da4453;'>	- </span></b>Verschrottung
-<b><span style='color:#da4453;'>		- </span></b>sichere Löschung vor der Verschrottung
-<b><span style='color:#da4453;'>			- </span></b>durch technische Verfahren nach <b>**DIN 66399**</b>
-<b><span style='color:#da4453;'>				- </span></b>mechanisch
-<b><span style='color:#da4453;'>				- </span></b>magnetisch
-<b><span style='color:#da4453;'>				- </span></b>thermische
-<b><span style='color:#da4453;'>		- </span></b>umwelt- und fachgerechte Entsorgung
-<b><span style='color:#da4453;'>			- </span></b>durch zertifiziertes Entsorgungsunternehmen
-
-
-
 
 <b><span style='color:#8e44ad;'>### Schadprogramme</span></b>
 <b><span style='color:#da4453;'>- </span></b>Virus
@@ -464,26 +373,14 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>	- </span></b>HTTPS over TLS
 <b><span style='color:#da4453;'>	- </span></b>SSH vs. Telnet
 <b><span style='color:#da4453;'>	- </span></b>Wireless Personal-Key-Authentication (WPA/PSK)
-<b><span style='color:#da4453;'>		- </span></b><b>**SSID**</b> Service Set Identifier
-<b><span style='color:#da4453;'>			- </span></b>IEEE-Norm 802.11
-<b><span style='color:#da4453;'>			- </span></b>Netzwerkname
-<b><span style='color:#da4453;'>			- </span></b>bis 32 Byte ASCII Zeichenlänge
-<b><span style='color:#da4453;'>			- </span></b>Broadcastdomain
-<b><span style='color:#da4453;'>		- </span></b>Multi-SSID
-<b><span style='color:#da4453;'>			- </span></b>mehrere Broadcastdomänen verwalten
-<b><span style='color:#da4453;'>		- </span></b>MAC-Filter (-Whitelist)
+<b><span style='color:#da4453;'>		- </span></b>SSID
+<b><span style='color:#da4453;'>		- </span></b>MAC-Filter
 <b><span style='color:#da4453;'>		- </span></b>WPS
 <b><span style='color:#da4453;'>		- </span></b>Wi-Fi Easy Connect
 <b><span style='color:#da4453;'>		- </span></b>WEP
 <b><span style='color:#da4453;'>		- </span></b>Enterprise
-<b><span style='color:#da4453;'>		- </span></b>RADIUS (-Server)
-<b><span style='color:#da4453;'>		- </span></b>Verschlüsselungsstandards:
-<b><span style='color:#da4453;'>			- </span></b><b>**AES**</b> Advanced Encryption Standard
-<b><span style='color:#da4453;'>			- </span></b><b>**TKIP**</b> Temporal Key Integrity Protocol
-<b><span style='color:#da4453;'>			- </span></b><b>**SAE**</b> Simultaneous Authentication of Equals
-<b><span style='color:#da4453;'>		- </span></b>Optional: Zusätzlicher Schutz durch VPN-Verbindung
-<b><span style='color:#da4453;'>	- </span></b>WPA2-Personal/Enterprise
-<b><span style='color:#da4453;'>	- </span></b>WPA3-Personal/Enterprise
+<b><span style='color:#da4453;'>		- </span></b>RADIUS
+<b><span style='color:#da4453;'>		- </span></b>Standards: AES, TKIP, SAE
 <b><span style='color:#da4453;'>	- </span></b>Endpoint-Security
 <b><span style='color:#da4453;'>	- </span></b>Application Controlled
 <b><span style='color:#da4453;'>	- </span></b>Datenverschlüsselung
@@ -499,61 +396,6 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>- </span></b>Autorisierung
 <b><span style='color:#da4453;'>- </span></b>MFA
 <b><span style='color:#da4453;'>- </span></b>Password-Policy
-
-
-<b><span style='color:#8e44ad;'>## Phasen eines Sicherheitsprozess</span></b>
-<b><span style='color:#da4453;'>- </span></b>nach BSI-Standard 100-2
-<span style='color:#da4453;'>1. </span>Initiierung
-<b><span style='color:#da4453;'>	- </span></b>Verantwortung übernehmen
-<b><span style='color:#da4453;'>		- </span></b>durch Leitungsebene
-<b><span style='color:#da4453;'>	- </span></b>Prozess konzepieren und planen
-<b><span style='color:#da4453;'>	- </span></b>Leitlinien erstellen
-<b><span style='color:#da4453;'>	- </span></b>Organisationsstruktur aufbauen
-<b><span style='color:#da4453;'>		- </span></b>Informationssicherheits-Management
-<b><span style='color:#da4453;'>	- </span></b>Ressourcen bereitstellen
-<b><span style='color:#da4453;'>		- </span></b>finanziel
-<b><span style='color:#da4453;'>		- </span></b>personel
-<b><span style='color:#da4453;'>		- </span></b>zeitlich
-<b><span style='color:#da4453;'>	- </span></b>Mitarbeitende in Prozess einbinden
-<span style='color:#da4453;'>2. </span>Konzept erstellen
-<span style='color:#da4453;'>3. </span>Konzept umsetzen
-<span style='color:#da4453;'>4. </span>Prozess im laufenden Betrieb aufrechterhalten
-<b><span style='color:#da4453;'>	- </span></b>kontinuierlich verbessern
-
-<b><span style='color:#8e44ad;'>## Unterbrechungsfreie Stromversorgung (USV)</span></b>
-<b><span style='color:#da4453;'>- </span></b>Klassifizierung nach <b>**IEC 62040-3**</b>
-<b><span style='color:#da4453;'>- </span></b>3 Klassen:
-<b><span style='color:#da4453;'>	- </span></b><b>**Klasse 1 VFI**</b> Voltage and Frequency Independent
-<b><span style='color:#da4453;'>		- </span></b>Online-USV, schützt vor Folgen bei...
-<b><span style='color:#da4453;'>			- </span></b>Stromausfall
-<b><span style='color:#da4453;'>			- </span></b>Unterspannung
-<b><span style='color:#da4453;'>			- </span></b>Überspannung
-<b><span style='color:#da4453;'>			- </span></b>Frequenzschwankung
-<b><span style='color:#da4453;'>		- </span></b>permanente Sinusspannung am Ausgang
-<b><span style='color:#da4453;'>		- </span></b>dauerhafte Versorgung
-<b><span style='color:#da4453;'>			- </span></b>ohne Einschränkungen
-<b><span style='color:#da4453;'>		- </span></b>gleichzeitige Akku-aufladung
-<b><span style='color:#da4453;'>		- </span></b>Eingangsspannung kann schwanken
-<b><span style='color:#da4453;'>			- </span></b>zwischen 160 und 290 Volt
-<b><span style='color:#da4453;'>		- </span></b>Ausgangsspannung entspricht Sinuskurve
-<b><span style='color:#da4453;'>			- </span></b>keine Störspannungen
-<b><span style='color:#da4453;'>			- </span></b>keine elektromagnetischen Einflüsse
-<b><span style='color:#da4453;'>			- </span></b>keine Frequenzstörungen
-<b><span style='color:#da4453;'>			- </span></b>keine Spannungsverzerungen
-<b><span style='color:#da4453;'>		- </span></b>unterbrechungsfreier Übergang auf Akkubetrieb
-<b><span style='color:#da4453;'>	- </span></b><b>**Klasse 2 VI**</b> Voltage Independent
-<b><span style='color:#da4453;'>		- </span></b>Netzinteraktive USV, schützt vor Folgen bei...
-<b><span style='color:#da4453;'>			- </span></b>Stromausfall
-<b><span style='color:#da4453;'>			- </span></b>Unterspannung
-<b><span style='color:#da4453;'>			- </span></b>Überspannung
-<b><span style='color:#da4453;'>		- </span></b>2-4 ms Umschaltzeit
-<b><span style='color:#da4453;'>			-  </span></b>von Akku- zum Netzbetrieb
-<b><span style='color:#da4453;'>	- </span></b><b>**Klasse 3 VFD**</b> Voltage and Frequency Dependent
-<b><span style='color:#da4453;'>		- </span></b>Offline- / Standby-USV, schützt vor Folgen bei...
-<b><span style='color:#da4453;'>			- </span></b>Stromausfall...
-<b><span style='color:#da4453;'>		- </span></b>4-10 ms Umschaltzeit
-
-
 </pre>
 </body>
 </html>
