--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -69,7 +69,7 @@
 </li><li> 3. steuern, kontrollieren
 </li><li> 4. abschließen
 
-</li></ul><h2> Projekte sind...
+</li></ul></ul><h2> Projekte sind...
 </h2><ul><li> befristet
 </li><li> innovativ
 </li><li> risikohaft
@@ -83,8 +83,7 @@
 </li><li> Kosten
 </li><li> Zeit
 
-</li></article>
-<article class="content flow">
+</li></ul>
 
 <h2> Rahmenbedingungen
 </h2><ul><li> <b>Datensicherheit
@@ -101,8 +100,7 @@
 </li><li> realistisch
 </li><li> terminiert
 
-</ul></article>
-<article class="content flow">
+</ul>
 
 <h3> Machbarkeitsanalyse
 </h3><ul><li> <b>Risikoanalyse
@@ -124,8 +122,7 @@
 </li><li> 4. behandeln, reduzieren,
 </li><li> 5. monitarisieren und verhindern.
 
-</li></ul></ul></article>
-<article class="content flow">
+</li></ul></ul>
 
 <h2> Kickoff-Off-Meeting
 </h2><ul><li> Nach Planung
@@ -156,8 +153,7 @@
 </li><li> messbarer Fortschritt
 </li><li> überwachung und berichten
 
-</li></ul></ul></article>
-<article class="content flow">
+</li></ul></ul>
 
 <h2> Projektstrukturplan
 </h2><ul><li> Gliederung
@@ -194,9 +190,7 @@
 </li><li> Risikoanalyse
 </li><li> Lizenzen
 
-</li></ul></ul></ul></article></div>
-<div class="grid-container">
-<article class="content flow">
+</li></ul></ul></ul>
 
 <h3> Projektleiter-Aufgaben
 </h3><ul><li> Auf Zieldefinition mitwirken
@@ -234,8 +228,7 @@
 </li><li> Spiral,
 </li><li> V-Modell
 
-</li></ul></ul></article>
-<article class="content flow">
+</li></ul></ul>
 
 <h4> agile Modelle
 </h4><ul><li> <b>Scrum</b>,
@@ -257,9 +250,6 @@
 </li><li> Risikoanalyse,
 </li><li> mit Standards / Normen,
 </li><li> Managementsysteme
-
-</article>
-<article class="content flow">
 
 </li></ul><h4> Planung
 </h4><ul><li> Projektstrukturplan,
@@ -283,8 +273,7 @@
 </li><li> Buttom-up
 </li><li> Yo-Yo-Ansatz
 
-</li></ul></ul></ul></article>
-<article class="content flow">
+</li></ul></ul></ul>
 
 <h3> Netzplan
 </h3><ul><li> zeitliche und logische Abhängigkeiten
@@ -313,8 +302,7 @@
 </li><li> Pufferzeiten markieren
 </li><li> Für &quot;kurze&quot; Projektdauer geeignet.
 
-</li></ul></ul></article>
-<article class="content flow">
+</li></ul></ul>
 
 <h3> Kanban Board
 </h3><ul></li><li> WIP-Limit (work in progress)
@@ -339,9 +327,7 @@
 </li><li> souveräner Vortrag
 </li><li> zeitliche Vorgaben
 
-</li></ul></ul></article></div>
-<div class="grid-container">
-<article class="content flow">
+</li></ul></ul>
 
 <h3> SCRUM
 </h3><ul><li> agiles Framework
@@ -371,8 +357,7 @@
 </li></ul><li> &quot;Daily Standup&quot;
 </li><ul><li> Tägliche Besprechung
 
-</li></ul></ul></ul></ul></article>
-<article class="content flow">
+</li></ul></ul></ul></ul>
 
 <h3> Teambildung (Bruce Tuckman)
 </h3><ul><li> 1. Forming, Orientierungsphase, Teams definieren
@@ -397,14 +382,15 @@
 </li></ul><li> Retrospektive
 </li></ul></ul>
 
-</li></ul></ul></ul></ul></article>
-<article class="content flow">
-
-</li></ul></ul></ul></ul></article>
-<article class="content flow">
-
-</li></ul></ul></ul></ul></article>
-<article class="content flow">
+<li><b> Integration</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung</span></span></li>
+<li><b> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung</span></li>
+<li><b> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan</span></li>
+<li><b> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen</span></li>
+<li><b> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation</span></li>
+<li><b> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal</span></li>
+<li><b> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze</span></li>
+<li><b> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät</span></li>
+<li><b> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen</span></li>
 
 </article>
 </div>
