markdown export to html editing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
 
 <!-- Favicon -->
-<link rel="icon" href="assets/img/ico/jumi.ico">
+<link rel="icon" href="https://www.jumi.biz/assets/img/ico/jumi.ico">
 <title>jumi</title>
 
 <!-- Debuger (falls nötig)
@@ -27,11 +27,11 @@ snippets,vorlagen,lernen,verstehen,
         <style>* {border: 1px solid red;}</style> -->
 
 <!-- Layout -->
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="assets/css/menu.css">
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/modal.css">
-<link rel="stylesheet" href="assets/css/media-queries.css">
+<link rel="stylesheet" href="https://www.jumi.biz/assets/css/style.css">
+<link rel="stylesheet" href="https://www.jumi.biz/assets/css/menu.css">
+<link rel="stylesheet" href="https://www.jumi.biz/assets/css/main.css">
+<link rel="stylesheet" href="https://www.jumi.biz/assets/css/modal.css">
+<link rel="stylesheet" href="https://www.jumi.biz/assets/css/media-queries.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -39,7 +39,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -51,14 +51,14 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://jumi.biz"><i class="menu-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
 </nav>
@@ -87,7 +87,7 @@ snippets,vorlagen,lernen,verstehen,
 
 <div class="inside-content">
 <div class="in-inside">
-<h3><a href="https://jumi.biz/Content.htm">
+<h3><a href="https://www.jumi.biz/Content.htm">
 Themen:</a></h3>
 <ul>
 <li>Fachinformatik</li>
@@ -100,7 +100,7 @@ Themen:</a></h3>
 </div>
 <div class="in-inside">
 <h3>Navigation: </h3>
-    <link rel="stylesheet" href="assets/css/word-as-button.css">
+    <link rel="stylesheet" href="https://www.jumi.biz/assets/css/word-as-button.css">
     <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li>
     <li><div class="keyboard-styled-word"><span>Enter</span></div> Öffnen </li></ol>
     <ul><li>Rückwärts selektieren<br><div class="keyboard-styled-word"><span>Shift</span></div> + <div class="keyboard-styled-word"><span>TAB</span></div></li></ul>
@@ -114,24 +114,24 @@ Themen:</a></h3>
 
 <div class="flex">
 
-<img id="modalTrigger01" src="assets/img/profile-img-1.png"
+<img id="modalTrigger01" src="https://www.jumi.biz/assets/img/profile-img-1.png"
 alt="Picture shows Jumi">
 <dialog id="openModal01">
-<img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
+<img src="https://www.jumi.biz/assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
 <h2>Human Interface</h2>
 <button id="closeModal01"> &times; </button></dialog>
 
-<img id="modalTrigger02" src="assets/img/profile-img-2.png"
+<img id="modalTrigger02" src="https://www.jumi.biz/assets/img/profile-img-2.png"
 alt="Picture shows shoe">
 <dialog id="openModal02">
-<img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
+<img src="https://www.jumi.biz/assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
 <h2>Local Area</h2>
 <button id="closeModal02"> &times; </button></dialog>
 
-<img id="modalTrigger03" src="assets/img/profile-img-3.png"
+<img id="modalTrigger03" src="https://www.jumi.biz/assets/img/profile-img-3.png"
 alt="Picture shows computer">
 <dialog id="openModal03">
-<img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
+<img src="https://www.jumi.biz/assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
 <h2>Central Processing</h2>
 <button id="closeModal03"> &times; </button></dialog>
 
@@ -177,38 +177,42 @@ alt="Picture shows computer">
 </article>
 </div>
 </main>
-
-<footer>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<footer><span class="flex profil-links">
+<!-- github.com/xuser123 -->
+<a id="githubIcon" href="https://github.com/xuser123" target="_blank">
+<img src="https://www.jumi.biz/assets/img/ico/github.ico" alt="Github/xuser123">
+</a>&#32;
+<!-- instagram.com/jumicontent -->
+<a id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank">
+<img src="https://www.jumi.biz/assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
+</a></span>
+
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
-<!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
-</footer>
+<span class="jumi-email">
+contact&#64;jumi.biz
+</span>
 
-<!-- Skripte -->
-    <script src="assets/js/menu.js"></script>
-	<script src="assets/js/modal.js"></script>
-    <!-- for Easteregg Project:
-    <script src="assets/js/read.js"></script> -->
-
-    <!-- PDF-Export-Script (jsPDF):
+<span class="flex siteFeatures">
+<!-- Export -Feature (inaktiv)-->
+<a id="exportIcon">
+<img src="https://www.jumi.biz/assets/img/ico/exportPDF.ico" alt="Export as PDF">
+<!-- PDF-Export-Script (jsPDF):
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="assets/js/jspdf.umd.min.js"> -->
+<script src="https://www.jumi.biz/assets/js/jspdf.umd.min.js"> -->
+</a>&#32;
 
-<!-- HTML-Analyzer Debugging ->
-<h1>HTML-Analyzer</h1>
-<div class="flex">
-<h3>Tags:</h3>
-<ul id="tagList"></ul>
-<h3>Classes:</h3>
-<ul id="classList"></ul>
-<h3>IDs:</h3>
-<ul id="idList"></ul>
-</div>
-<script src="assets/js/html-analyzer.js"></script>
-<!- HTML-Analyzer Debugging -->
+<!-- Zum Seitenanfang -Feature (aktiv)-->
+<a id="scrollToTop" href="#">
+<img src="https://www.jumi.biz/assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+</a></span></footer>
+
+    <!-- JavaScript -->
+    <script src="https://www.jumi.biz/assets/js/menu.js"></script>
+	<script src="https://www.jumi.biz/assets/js/modal.js"></script>
+
+    <!-- for Easteregg Project:
+    <script src="https://www.jumi.biz/assets/js/read.js"></script> -->
 
 </body>
 </html>
