--- a/pages/Datensicherheit-01.htm
+++ b/pages/Datensicherheit-01.htm
@@ -53,28 +53,26 @@ snippets,vorlagen,lernen,verstehen,
 <li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
 <img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
-<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
-<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
-</ul></nav></div></header><main>
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li></ul></nav></div></header><main>
 
 <div class="grid-container">
 <article class="content flow">
-<h2 id="bigHL">Informationssicherheit </h2>
+<h2 id="bigHL">AAAAAAAA </h2>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
-        <h3>Standards </h3>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-27000.htm">ISO/IEC 27000 </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-2700x.htm">ISO/IEC 2700x </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
-        <h3>IT-Grundschutz </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Elementare_Gefährdungen.htm">Elementare Gefährdungen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Prozess_Bausteine.htm">Prozess Bausteine </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/System_Bausteine.htm">System Bausteine </a></b></li>
-        <h3>Datensicherheit </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Datenschutz.htm">Datenschutz </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/organisatorische_Maßnahmen.htm">organisatorische Maßnahmen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/technisch_Maßnahmen.htm">technisch Maßnahmen </a></b></li>
+        <h3>### </h3>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <h3>### </h3>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <h3>### </h3>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
       </ul>
     </div>
     <div class="in-inside">
