markdown export to html editing

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ snippets,vorlagen,lernen,verstehen,
         <style>* {border: 1px solid red;}</style> -->
 
 <!-- Layout -->
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/style.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/menu.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/main.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/modal.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/media-queries.css">
+<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/modal.css">
+<link rel="stylesheet" href="assets/css/media-queries.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -110,7 +110,7 @@ Themen:</a></h3>
 <article class="content flow">
 
 <!-- $ whoami -->
-<h2>&#36; whoami</h2>
+<h2 id="bigHL">&#36; whoami</h2>
 
 <div class="flex">
 
@@ -138,37 +138,37 @@ alt="Picture shows computer">
 </div>
 
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
-    visuell-ergonomische Texte zu fragmentieren. Meine Quellen sind öffentliche Personen mit großer Reichweite und private Weiterbildungen.<br><br>
+    visuell-ergonomische Texte zu&nbsp;fragmentieren. Meine&nbsp;Quellen sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
     <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske!" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
 <article class="content flow">
 
 <!-- Dark Mode Only -->
-<h2>Dark Mode Only</h2>
-    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
-    Wenn du den hellen Modus immer noch bevorzugst dann GTFO!<br><br>
+<h2 id="bigHL">Dark Mode Only</h2>
+    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
+    Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
     <span class="kleintxt">"Come to the Dark Side" <br>-Darth Vader</span></p>
 
 </article>
 <article class="content flow">
 
 <!-- IT ~ Kung Fu -->
-<h2>IT &#126; Kung Fu</h2>
-    <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und Techniken,
-    die durch lange, harte Übung und Geduld erlangt werden. Eine Disziplin,
-    die zur Meisterung viel Engagement und Einsatz erfordert.
-    Kung Fu kombiniert Bewegungen und Strategien,
-    während Informations-Technologie Daten verarbeitet und speichert.
-    Kung Fu beherrschen verlangt Reaktionsfähigkeit,
-    bei Informationen entscheidet analytisches und logisches Denken.<br><br>
+<h2 id="bigHL">IT &#126; Kung Fu</h2>
+    <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
+    die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
+    Eine&nbsp;Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
+    Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien,
+    während&nbsp;Informations-Technologie Daten verarbeitet und&nbsp;speichert.
+    Kung&nbsp;Fu beherrschen verlangt Reaktionsfähigkeit,&nbsp;
+    bei&nbsp;Informationen entscheidet analytisches und logisches&nbsp;Denken.<br><br>
     <span class="kleintxt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
 
 </article>
 <article class="content flow">
 
 <!-- Shownotes -->
-<h3>Shownotes</h3>
+<h3 id="bigHL">Shownotes</h3>
 	<ul><li>Kommasetzung mit KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
 	<li>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></li>
 	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
