--- a/Content.htm
+++ b/Content.htm
@@ -22,11 +22,11 @@ snippets,vorlagen,lernen,verstehen,
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Sheets -->
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/style.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/menu.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/main.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/modal.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/media-queries.css">
+<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/modal.css">
+<link rel="stylesheet" href="assets/css/media-queries.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
